🌐 Update domain configuration and branding
✨ Domain & Branding Updates:
- Updated all placeholder domains to kishanskraft.com
- Corrected sitemap URLs and SEO meta tags
- Updated Open Graph URLs across all pages
- Fixed structured data organization URLs
- Updated robots.txt with correct sitemap reference

🔧 Configuration Improvements:
- Enhanced GitHub Actions workflows with proper domain references
- Updated deployment documentation with actual domain
- Refined package.json metadata and descriptions
- Improved contact information consistency across pages

📊 SEO & Performance:
- Proper canonical URLs for search engine optimization
- Correct domain references in all meta tags
- Updated sitemap for better search indexing
- Consistent branding across all pages and components

Ready for production deployment with proper domain configuration! 🚀

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="About KishansKraft - Traditional Mustard Oil Heritage">
   <meta property="og:description" content="Discover the story behind KishansKraft's premium coldpressed mustard oil from Bihar. Traditional methods and local farming heritage.">
   <meta property="og:image" content="/images/og-about.webp">
-  <meta property="og:url" content="https://your-domain.com/about.html">
+  <meta property="og:url" content="https://kishanskraft.com//about.html">
   <meta property="og:type" content="website">
   
   <!-- Twitter Card Meta Tags -->
