--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Contact KishansKraft - Order Premium Mustard Oil">
   <meta property="og:description" content="Get in touch with KishansKraft for premium coldpressed mustard oil orders and inquiries.">
   <meta property="og:image" content="/images/og-contact.webp">
-  <meta property="og:url" content="https://your-domain.com/contact.html">
+  <meta property="og:url" content="https://kishanskraft.com//contact.html">
   <meta property="og:type" content="website">
   
   <!-- Twitter Card Meta Tags -->
@@ -84,7 +84,7 @@
             <p class="mb-md" style="color: var(--text-muted);">
               Quick and easy ordering via WhatsApp. Get instant responses and personalized service.
             </p>
-            <a href="https://wa.me/919999999999?text=Hi,%20I%27d%20like%20to%20know%20more%20about%20KishansKraft%20mustard%20oil%20products" 
+            <a href="https://wa.me/916207337620?text=Hi,%20I%27d%20like%20to%20know%20more%20about%20KishansKraft%20mustard%20oil%20products" 
                class="btn btn-primary" 
                target="_blank" 
                rel="noopener noreferrer"
@@ -104,7 +104,7 @@
             <p class="mb-md" style="color: var(--text-muted);">
               Speak directly with our team for detailed product information and bulk orders.
             </p>
-            <a href="tel:+919999999999" 
+            <a href="tel:+916207337620" 
                class="btn btn-secondary" 
                style="width: 100%;">
                Call Now
