--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="KishansKraft - Premium Coldpress Mustard Oil from Bihar">
   <meta property="og:description" content="Pure, traditional coldpressed mustard oil made with generations of expertise in Bihar. Rich in nutrients and authentic flavor.">
   <meta property="og:image" content="/images/og-hero-mustard-oil.webp">
-  <meta property="og:url" content="https://your-domain.com/">
+  <meta property="og:url" content="https://kishanskraft.com//">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="KishansKraft">
   
@@ -82,8 +82,8 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "KishansKraft",
-    "url": "https://your-domain.com",
-    "logo": "https://your-domain.com/images/logo.png",
+    "url": "https://kishanskraft.com/",
+    "logo": "https://kishanskraft.com//images/logo.png",
     "description": "Premium coldpressed mustard oil from Bihar, made with traditional methods",
     "address": {
       "@type": "PostalAddress",
@@ -128,7 +128,7 @@
               <li><a href="/contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="navbar-cta">
-              <a href="https://wa.me/919999999999?text=Hi,%20I%27d%20like%20to%20order%20KishansKraft%20mustard%20oil" class="cta-button" target="_blank" rel="noopener noreferrer">Order Now</a>
+              <a href="https://wa.me/916207337620?text=Hi,%20I%27d%20like%20to%20order%20KishansKraft%20mustard%20oil" class="cta-button" target="_blank" rel="noopener noreferrer">Order Now</a>
             </div>
           </div>
         </div>
@@ -146,7 +146,7 @@
           
           <div class="hero-cta">
             <a href="/products.html" class="btn btn-primary">Explore Products</a>
-            <a href="https://wa.me/919999999999?text=Hi,%20I%27d%20like%20to%20know%20more%20about%20KishansKraft%20mustard%20oil" 
+            <a href="https://wa.me/916207337620?text=Hi,%20I%27d%20like%20to%20know%20more%20about%20KishansKraft%20mustard%20oil" 
                class="btn btn-secondary" 
                target="_blank" 
                rel="noopener noreferrer">
@@ -256,7 +256,7 @@
             <h4 class="footer-heading">Contact</h4>
             <address class="footer-contact">
               <p>Sapta, Madhubani, Bihar - 847223</p>
-              <p><a href="tel:+919999999999" class="footer-link">+91 99999 99999</a></p>
+              <p><a href="tel:+916207337620" class="footer-link">+91 99999 99999</a></p>
             </address>
           </div>
         </div>
