--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="KishansKraft Products - Premium Coldpress Mustard Oil">
   <meta property="og:description" content="Browse our range of premium coldpressed mustard oil products. Pure, traditional, and made in Bihar.">
   <meta property="og:image" content="/images/og-products.webp">
-  <meta property="og:url" content="https://your-domain.com/products.html">
+  <meta property="og:url" content="https://kishanskraft.com//products.html">
   <meta property="og:type" content="website">
   
   <!-- Twitter Card Meta Tags -->
@@ -165,7 +165,7 @@
         </p>
         
         <div class="hero-cta">
-          <a href="https://wa.me/919999999999?text=Hi,%20I%20have%20questions%20about%20KishansKraft%20products" 
+          <a href="https://wa.me/916207337620?text=Hi,%20I%20have%20questions%20about%20KishansKraft%20products" 
              class="btn btn-primary" 
              target="_blank" 
              rel="noopener noreferrer">
