🔄 Update all references to new repository name
📝 Repository Migration: aazgit/24 → aazgit/kishanskraft.com

✅ Updated Files:
- README.md: GitHub Actions badges and links
- package.json: Repository, bugs, and homepage URLs
- deploy-plesk.sh: Git clone URL for automated deployment
- PLESK-DEPLOYMENT.md: Example commands and clone URLs
- deployment-status.html: GitHub Actions dashboard link
- CHANGELOG.md: Repository links in documentation
- GitHub Actions workflows documentation

🎯 Changes Made:
- All GitHub repository URLs corrected
- Deployment scripts updated with new repo URL
- Documentation links synchronized
- Status badges and action links updated
- Migration documentation added

✅ Verification:
- Live website (kishanskraft.com) unaffected
- CI/CD pipeline continues to work
- All deployment automation updated
- Documentation consistency maintained

Repository successfully renamed for better alignment with domain! 🚀

--- a/deployment-status.html
+++ b/deployment-status.html
@@ -178,7 +178,7 @@
         <div class="quick-links">
             <a href="/" class="quick-link">🏠 Homepage</a>
             <a href="/products.html" class="quick-link">🛍️ Products</a>
-            <a href="https://github.com/aazgit/24/actions" class="quick-link" target="_blank">⚙️ GitHub Actions</a>
+            <a href="https://github.com/aazgit/kishanskraft.com/actions" class="quick-link" target="_blank">⚙️ GitHub Actions</a>
             <a href="https://web.dev/measure/" class="quick-link" target="_blank">📊 Lighthouse Audit</a>
         </div>
     </div>
