🔧 Force cache invalidation with version parameters
- Add cache-busting version params to all HTML files (v=202509251627)
- Update service worker cache name to force PWA cache refresh
- This ensures browser loads the fixed security.js and other files
- Products should now display correctly on live website

--- a/about.html
+++ b/about.html
@@ -239,6 +239,6 @@
     </noscript>
   </footer>
 
-  <script type="module" src="/assets/js/site.js"></script>
+  <script type="module" src="/assets/js/site.js?v=202509251627"></script>
 </body>
 </html>
