--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
   </footer>
 
   <!-- JavaScript Modules -->
-  <script type="module" src="/assets/js/site.js"></script>
+  <script type="module" src="/assets/js/site.js?v=202509251627"></script>
   
   <!-- Service Worker for PWA -->
   <script>
