--- a/product.html
+++ b/product.html
@@ -434,6 +434,6 @@
     }
   </script>
   
-  <script type="module" src="/assets/js/site.js"></script>
+  <script type="module" src="/assets/js/site.js?v=202509251627"></script>
 </body>
 </html>
